# toeic4all-auth-server

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
app/: main.py
app/api/: auth.py  dependencies.py  social.py
app/core/: config.py  security.py
app/db/: mongodb.py  redis_client.py
app/models/: auth_log.py  session.py  user.py
app/schemas/: auth.py  session.py  user.py
app/services/: auth_service.py  email_service.py  session_service.py  social_service.py
app/utils/: auth_utils.py  logger.py  password_utils.py
deploy/toeic4all-auth-server/: Chart.yaml  values.yaml
deploy/toeic4all-auth-server/templates/: deployment.yaml  service.yaml
